--- a/thesis.bib
+++ b/thesis.bib
@@ -729,3 +729,117 @@ language={English}
   year={2011},
   abstract={The CMS collaboration has developed a fast Monte Carlo simulation of the CMS detector with event production rates ~100 times faster than the GEANT4-based simulation, with nonetheless comparable accuracy for most of the physics objects typically considered in the analyses. We discuss basic technical principles of the CMS Fast Simulation and their implementation in the different components of the detector: the silicon tracker, the electromagnetic calorimeter, the hadronic calorimeter, the muon system, the Level 1 and the High Level Trigger. A few comparisons of the Fast Simulation results both with the GEANT4-based Full Simulation and with the LHC data are shown.}
 }	
+@article{Jadach1993361,
+title = "The $\tau$ decay library TAUOLA, version 2.4 ",
+journal = "Computer Physics Communications ",
+volume = "76",
+number = "3",
+pages = "361 - 380",
+year = "1993",
+note = "",
+issn = "0010-4655",
+doi = "http://dx.doi.org/10.1016/0010-4655(93)90061-G",
+url = "http://www.sciencedirect.com/science/article/pii/001046559390061G",
+author = "S. Jadach and Z. Wa̧s and R. Decker and J.H. Kühn"
+}
+
+@article{ttXsec,
+year={2014},
+journal={Journal of High Energy Physics},
+eid={24},
+volume={2014},
+number={2},
+doi={10.1007/JHEP02(2014)024},
+title="{Measurement of the  $t\overline{t}$  production cross section in the dilepton channel in pp collisions at  $\sqrt{s}$  = 8 TeV}",
+url={http://dx.doi.org/10.1007/JHEP02%282014%29024},
+publisher={Springer Berlin Heidelberg},
+keywords={Hadron-Hadron Scattering; Top physics},
+author={Chatrchyan, S. et al},
+language={English}
+}
+@article{Li:2012wna,
+      author         = "Li, Ye and Petriello, Frank",
+      title          = "{Combining QCD and electroweak corrections to dilepton
+                        production in FEWZ}",
+      journal        = "Phys.Rev.",
+      volume         = "D86",
+      pages          = "094034",
+      doi            = "10.1103/PhysRevD.86.094034",
+      year           = "2012",
+      eprint         = "1208.5967",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "ANL-HEP-PR-12-68",
+      SLACcitation   = "%%CITATION = ARXIV:1208.5967;%%",
+}
+
+@article{Campbell:2011bn,
+      author         = "Campbell, John M. and Ellis, R. Keith and Williams,
+                        Ciaran",
+      title          = "{Vector boson pair production at the LHC}",
+      journal        = "JHEP",
+      volume         = "1107",
+      pages          = "018",
+      doi            = "10.1007/JHEP07(2011)018",
+      year           = "2011",
+      eprint         = "1105.0020",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-11-182-T",
+      SLACcitation   = "%%CITATION = ARXIV:1105.0020;%%",
+}
+
+@article{Kidonakis:2012db,
+      author         = "Kidonakis, Nikolaos",
+      title          = "{Differential and total cross sections for top pair and
+                        single top production}",
+      pages          = "831-834",
+      doi            = "10.3204/DESY-PROC-2012-02/251",
+      year           = "2012",
+      eprint         = "1205.3453",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1205.3453;%%",
+}
+
+@article{Alwall:2011uj,
+      author         = "Alwall, Johan and Herquet, Michel and Maltoni, Fabio and
+                        Mattelaer, Olivier and Stelzer, Tim",
+      title          = "{MadGraph 5 : Going Beyond}",
+      journal        = "JHEP",
+      volume         = "1106",
+      pages          = "128",
+      doi            = "10.1007/JHEP06(2011)128",
+      year           = "2011",
+      eprint         = "1106.0522",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-11-448-T",
+      SLACcitation   = "%%CITATION = ARXIV:1106.0522;%%",
+}
+@article{Garzelli:2012bn,
+      author         = "Garzelli, M.V. and Kardos, A. and Papadopoulos, C.G. and
+                        Trocsanyi, Z.",
+      title          = "{t $\bar{t}$ $W^{+-}$ and t $\bar{t}$ Z Hadroproduction
+                        at NLO accuracy in QCD with Parton Shower and
+                        Hadronization effects}",
+      journal        = "JHEP",
+      volume         = "1211",
+      pages          = "056",
+      doi            = "10.1007/JHEP11(2012)056",
+      year           = "2012",
+      eprint         = "1208.2665",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1208.2665;%%",
+}
+@techreport{CMS-PAS-TOP-13-011,
+      title         = "{Measurement of the inclusive top-quark pair + photon
+                       production cross section in the muon + jets channel in pp
+                       collisions at 8 TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-TOP-13-011",
+      year          = "2014",
+}
