--- a/thesis.tex
+++ b/thesis.tex
@@ -255,6 +255,7 @@
 %\input{conclusion}
 \appendix
 \input{appendixSamples}
+\input{appendixRmue}
 %\bibliographystyle{abbrv}
 \bibliographystyle{unsrt}
 \bibliography{thesis.bib}
