--- a/ana.tex
+++ b/ana.tex
@@ -257,7 +257,7 @@ As this detailed simulation is quite time consuming, a fast simulation of the CM
 
 Simulated events are stored in the AODSIM data format, which is identical to the AOD format but also includes Monte Carlo truth information about the simulated particles and their production and decay history. This allows for a processing of simulated datasets with the same software as used in the analysis of data events. 
 \subsubsection{Background Samples}
-Possible background contributions in the analysis arise from all Standard Model processes producing lepton pairs or one lepton with the possibility for other parts of their signature to be misidentified as a second lepton. The properties of these processes can be studied in simulation. Therefore, a extensive list of simulated processes is considered in the analysis. In many cases, processes are divided into different samples based on the different possible final states. This allows to produce larger sample sizes for decays with small branching fraction without having to generate enormous amounts of more abundant final states. The full list of considered processes is shown in Table~\ref{tab:MCSamples}. The samples have to be scaled according to the appropriate integrated luminosity, taking into account the number of generated events and the cross section of the process. The weight is then given by $w  = \frac{L\cdot \sigma}{N_{events}^{gen}}$. The top-pair production is normalized to the cross section measured by CMS in the dileptonic decay channel~\cite{ttXsec}. Cross sections for the production and dileptonic decays of W and Z bosons have been calculated using FEWZ 3.1~\cite{Li:2012wna}, including corrections in N(N)LO in electronweak theory (QCD). MCFM 6.6~\cite{Campbell:2011bn} is used for the calculation of cross sections for diboson production. Cross sections for single top production have been calculated at approx. NNLO~\cite{Kidonakis:2012db}. Cross sections at NLO in QCD for triboson production have been calculated using aMC@NLO~\cite{Madgraph2}, while for $t\bar{t}$ production in association with additional vector bosons, MCFM 6.6 has been used~\cite{Garzelli:2012bn}. The cross section for top-pair production in association with a photon has been measured by CMS~\cite{CMS-PAS-TOP-13-011}.  
+Possible background contributions in the analysis arise from all Standard Model processes producing lepton pairs or one lepton with the possibility for other parts of their signature to be misidentified as a second lepton. The properties of these processes can be studied in simulation. Therefore, a extensive list of simulated processes is considered in the analysis. In many cases, processes are divided into different samples based on the different possible final states. This allows to produce larger sample sizes for decays with small branching fraction without having to generate enormous amounts of more abundant final states. The full list of considered processes is shown in Table~\ref{tab:MCSamples}. The samples have to be scaled according to the appropriate integrated luminosity, taking into account the number of generated events and the cross section of the process. The weight is then given by $w  = \frac{L\cdot \sigma}{N_{events}^{gen}}$. The top-pair production is normalized to the cross section measured by CMS in the dileptonic decay channel~\cite{ttXsec}. Cross sections for the production and dileptonic decays of W and Z bosons have been calculated using FEWZ 3.1~\cite{Li:2012wna}, including corrections in N(N)LO in electronweak theory (QCD). MCFM 6.6~\cite{Campbell:2011bn} is used for the calculation of cross sections for diboson production. Cross sections for single top production have been calculated at approx. NNLO~\cite{Kidonakis:2012db}. Cross sections at NLO in QCD for triboson production have been calculated using aMC@NLO~\cite{Madgraph2}, while for $t\bar{t}$ production in association with one additional vector boson, MCFM 6.6 has been used~\cite{Garzelli:2012bn}, while for  $t\bar{t}WW$ the cross section calculated by Madgraph is used. The cross section for top-pair production in association with a photon has been measured by CMS~\cite{CMS-PAS-TOP-13-011}.  
 \begin{table}
 \small
 \begin{center}
@@ -358,6 +358,7 @@ Leptons with small spatial separation can interfere with each other's reconstruc
 \end{figure}    
 
 As an additional requirement, to avoid possible reconstruction problems events with low lepton momenta and to avoid contamination from dilepton production in the decay of the bottonium resonances, the dilepton invariant mass \mll is required to be greater than $\unit{20}{\giga\electronvolt}$. 
+
 
 \subsection{Selections in \MET and jet multiplicity}
 Three subsets of the event sample obtained with the inclusive dilepton selection are defined, resulting in samples enriched in different processes. The variables used in the definitions of these regions are \MET and the number of selected jets $N_{jets}$. The selections are illustrated in the plots of Figure~\ref{fig:sigRegionBG}, which also show the distribution of $t\bar{t}$ (left) and Drell-Yan (right) events in the \MET-$N_{jets}$ plane. 
